# django-bitoptions

./: .checkignore  .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-test.yml
bitoptions/: __init__.py  fields.py  forms.py  lookups.py  utils.py  widgets.py
testproject/: manage.py
testproject/testapp/: admin.py  models.py  tests.py
testproject/testapp/migrations/: 0001_initial.py
testproject/testproject/: settings.py  urls.py
